# multigen

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/: base_analyzer.hpp  dependency_resolver.hpp  multigen.hpp  pdb.hpp
include/backends/: base_backend.hpp  mono.hpp  source2.hpp
include/imgui_impl/: imgui_impl_dx11.h  imgui_impl_win32.h
include/inspector/: metadata_container.hpp  metadata_field_container.hpp  metadata_method_container.hpp  metadata_reference_container.hpp  metadata_type.hpp
include/memory/: base_memory.hpp  win32_memory.hpp
include/processors/: base_processor.hpp  default_processor.hpp  sdk_processor.hpp
include/serializers/: base_serializer.hpp  internal_serializer.hpp
lib/: CMakeLists.txt
src/: main.cpp  multigen.cpp
src/imgui_impl/: imgui_impl_dx11.cpp  imgui_impl_win32.cpp
